# Noxipher

./: .env.example  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.agents/skills/: pre_push_rules.md
.github/workflows/: ci.yml  release.yml
docs/: contributing.md  getting_started.md  index.md  spec.md
docs/api/: address.md  client.md  contract.md  core.md  crypto.md  indexer.md  node.md  proof.md  token.md  tx.md  wallet.md
src/noxipher/: __init__.py
src/noxipher/address/: __init__.py  bech32m.py  models.py  validator.py
src/noxipher/contract/: __init__.py  compact.py  instance.py  models.py  service.py
src/noxipher/core/: __init__.py  client.py  config.py  exceptions.py  health.py  logger.py  retry.py
src/noxipher/crypto/: __init__.py  commitment.py  curves.py  fields.py  hash.py  jubjub.py  keys.py  poseidon.py  poseidon_constants.py
src/noxipher/dapp/: __init__.py  connector.py
src/noxipher/indexer/: __init__.py  client.py  models.py  mutations.py  queries.py  subscriptions.py
src/noxipher/ledger/: __init__.py  ledger.py  models.py
src/noxipher/node/: __init__.py  client.py
src/noxipher/proof/: __init__.py  client.py  disclosure.py  prover.py  verifier.py
src/noxipher/testing/: __init__.py  fixtures.py  testkit.py
src/noxipher/token/: __init__.py  dust.py  night.py  shielded.py
src/noxipher/tx/: __init__.py  builder.py  intent.py  models.py  offer.py  scale.py
src/noxipher/wallet/: __init__.py  balance.py  dust.py  keystore.py  shielded.py  sync.py  unshielded.py  wallet.py
src/noxipher/zswap/: __init__.py  notes.py  pool.py  state.py
tests/: conftest.py  test_placeholder.py
tests/unit/: test_address.py  test_bech32m.py  test_config.py  test_connector.py  test_crypto_jubjub.py  test_crypto_keys.py  test_hash.py  test_indexer_models.py  test_keystore.py  test_merkle.py  test_scale.py  test_scale_serialization.py  test_sync.py  test_tokens.py  test_tx_builder.py  test_wallet.py  test_zswap_commitments.py
